--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,10 @@ body {
   font-size: 1.2em;
 }
 
-h1 {
+h2 {
   font-family: "Sacramento", cursive;
-  font-size: 4rem;
+  font-size: 4rem !important;
+  text-align: center;
 }
 
 .container {
@@ -68,7 +69,7 @@ nav {
 
 .menu > a {
   display: inline-block;
-  width: 20%;
+  width: 12.5%;
   float: left;
   text-align: center;
   color: #bbb;
@@ -116,8 +117,7 @@ ul {
 
 section.views.column-ct {
   flex-direction: column;
-  text-align: center;
-  padding: 2em 0;
+  padding: 2em 4em;
 }
 
 section.views.column-ct:nth-child(even) {
@@ -189,12 +189,6 @@ section.views.column-ct:nth-child(odd) {
 
 .animated {
   color: #b5cd60;
-}
-
-h2 {
-  color: #3fc1ff;
-  margin: 5px 0 0 0;
-  font-size: 18px;
 }
 
 a {
