--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  line-height: 1.75em;
 }
 
 * {
@@ -31,6 +32,24 @@ h2 {
   font-family: "Sacramento", cursive;
   font-size: 4rem !important;
   text-align: center;
+  @media (max-width: 660px) {
+    font-size: 3rem !important;
+  }
+}
+
+.pose {
+  height: 200px;
+  width: 200px;
+}
+
+.pose-container {
+  width: 200px;
+
+  @media (max-width: 660px) {
+
+    width: 100px;
+    display:flex-direction;    
+  }
 }
 
 .container {
@@ -57,6 +76,10 @@ nav {
   position: fixed;
   height: 50px;
   z-index: 2;
+
+  @media (max-width: 660px) {
+    display: none;
+  }
 }
 
 .menu {
@@ -69,7 +92,7 @@ nav {
 
 .menu > a {
   display: inline-block;
-  width: 12.5%;
+  width: 11.11%;
   float: left;
   text-align: center;
   color: #bbb;
@@ -112,12 +135,16 @@ section.views {
 }
 
 ul {
-  list-style-type: "𑁍 ";
+  list-style-type: "𑁍";
+}
+
+li {
+  padding-left: 2em;
 }
 
 section.views.column-ct {
   flex-direction: column;
-  padding: 2em 4em;
+  padding: 1em 2em;
 }
 
 section.views.column-ct:nth-child(even) {
@@ -148,6 +175,8 @@ section.views.column-ct:nth-child(odd) {
 .text-block li {
   margin-top: 20px;
   list-style-type: "𑁍";
+  list-style-position: outside;
+  padding-left: 2rem;
 }
 
 .profile {
